# simple-screen-test-tool

./: CMakeLists.txt  README.md  sstt
src/: main.c
